# rustenstein-3d

./: .gitignore  Cargo.toml  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
src/: color.rs  main.rs  timer.rs
src/game/: field.rs  field.txt  mod.rs  player.rs
src/new_renderer/: mod.rs  pixel.rs  text.rs
src/new_renderer/shader/: lit_texture.rs  mod.rs  old_wall.rs  texture.rs  unlit_texture.rs
src/new_renderer/texture/: color.rs  mod.rs  procedural_grass.rs  procedural_red.rs  simple_sprite.rs
src/renderer/: char.rs  mod.rs  pixel.rs  pixel_colors.rs  sprite.rs  sprite_consts.rs
