[package]
name = "rustenstein-3d"
version = "0.1.0"
authors = ["UARTman <uartman@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.28", features = ["default"]}
pixels = "0.13.0"
winit_input_helper = "0.14"
font8x8 = "0.3.1"
